Add environment variables for owu and bag

--- a/bedrock-openweb-ui.yaml
+++ b/bedrock-openweb-ui.yaml
@@ -4,13 +4,13 @@ services:
     container_name: open-webui
     restart: always
     ports:
-      - 8080:8080
+      - ${OPENWEBUI_PORT:-8080}:8080
     expose:
       - 8080
     volumes:
       - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/open-webui:/app/backend/data
     environment:
-      - OPENAI_API_BASE_URL=http://bedrock-access-gateway/api/v1
+      - OPENAI_API_BASE_URL=${BEDROCK_PROTOCOL:-http}://bedrock-access-gateway:${BEDROCK_PORT:-80}/api/v1
       - OPENAI_API_KEY=bedrock
       - ENABLE_OLLAMA_API=False
       - USE_CUDA_DOCKER=True
@@ -24,7 +24,7 @@ services:
     container_name: bedrock-access-gateway
     restart: always
     expose:
-      - 80
+      - ${BEDROCK_PORT:-80}
     environment:
       - AWS_REGION=${AWS_REGION:-us-west-2}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
