--- a/bedrock-openweb-ui.yaml
+++ b/bedrock-openweb-ui.yaml
@@ -1,19 +1,23 @@
 services:
   open-webui:
     image: ghcr.io/open-webui/open-webui:main
+    pull_policy: always
     container_name: open-webui
-    restart: always
+    restart: unless-stopped
     ports:
-      - ${OPENWEBUI_PORT:-8080}:8080
+      - ${OPENWEBUI_PORT:-8080}:${OPENWEBUI_PORT:-8080}
     expose:
-      - 8080
+      - ${OPENWEBUI_PORT:-8080}
     volumes:
-      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/open-webui:/app/backend/data
+      - open-webui:/app/backend/data
     environment:
-      - OPENAI_API_BASE_URL=${BEDROCK_PROTOCOL:-http}://bedrock-access-gateway:${BEDROCK_PORT:-80}/api/v1
+      - OPENAI_API_BASE_URL=http://bedrock-access-gateway/api/v1
       - OPENAI_API_KEY=bedrock
-      - ENABLE_OLLAMA_API=False
+      - ENABLE_OLLAMA_API=True
+      - OLLAMA_BASE_URL=http://ollama-server:11434
       - USE_CUDA_DOCKER=True
+      - MODELS_CACHE_TTL=1210000
+      - PORT=${OPENWEBUI_PORT:-8080}
     networks:
       - proxy
 
@@ -22,9 +26,11 @@ services:
       context: https://github.com/aws-samples/bedrock-access-gateway.git#main:src
       dockerfile: Dockerfile_ecs
     container_name: bedrock-access-gateway
-    restart: always
+    restart: unless-stopped
+    ports:
+      - ${BEDROCK_ACCESS_GATEWAY_PORT:-8000}:80
     expose:
-      - ${BEDROCK_PORT:-80}
+      - ${BEDROCK_ACCESS_GATEWAY_PORT:-8000}
     environment:
       - AWS_REGION=${AWS_REGION:-us-west-2}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
@@ -32,7 +38,30 @@ services:
     networks:
       - proxy
 
+  ollama-server:
+    image: ollama/ollama:latest
+    pull_policy: always
+    volumes:
+      - ollama:/root/.ollama
+      - ./scripts/ollama/entrypoint.sh:/entrypoint.sh
+    container_name: ollama-server
+    tty: true
+    restart: unless-stopped
+    ports:
+      - ${OLLAMA_WEBAPI_PORT:-11434}:${OLLAMA_WEBAPI_PORT:-11434}
+    expose:
+      - ${OLLAMA_WEBAPI_PORT:-11434}
+    environment:
+      - OLLAMA_WEBAPI_PORT=${OLLAMA_WEBAPI_PORT:-11434}
+    entrypoint: ["/bin/bash", "/entrypoint.sh"]
+    networks:
+      - proxy
+
 networks:
   proxy:
     name: open-webui-proxy
     driver: bridge
+
+volumes:
+  ollama: {}
+  open-webui: {}
