--- a/bedrock-openweb-ui.yaml
+++ b/bedrock-openweb-ui.yaml
@@ -4,22 +4,29 @@ services:
     pull_policy: always
     container_name: open-webui
     restart: unless-stopped
+    volumes:
+      - open-webui:/app/backend/data
+    networks:
+      - proxy
     ports:
       - ${OPENWEBUI_PORT:-8080}:${OPENWEBUI_PORT:-8080}
     expose:
       - ${OPENWEBUI_PORT:-8080}
-    volumes:
-      - open-webui:/app/backend/data
     environment:
+      - PORT=${OPENWEBUI_PORT:-8080}
       - OPENAI_API_BASE_URL=http://bedrock-access-gateway/api/v1
       - OPENAI_API_KEY=bedrock
       - ENABLE_OLLAMA_API=True
       - OLLAMA_BASE_URL=http://ollama-server:11434
       - USE_CUDA_DOCKER=True
       - MODELS_CACHE_TTL=1210000
-      - PORT=${OPENWEBUI_PORT:-8080}
-    networks:
-      - proxy
+      - ENABLE_RAG_WEB_SEARCH=True
+      - RAG_WEB_SEARCH_ENGINE=searxng
+      - RAG_WEB_SEARCH_RESULT_COUNT=10
+      - SEARXNG_SECRET=${SEARXNG_SECRET:-someseaxngsecret}
+      - SEARXNG_LIMITER=False
+      - SEARXNG_PUBLIC_INSTANCE=False
+      - SEARXNG_QUERY_URL=http://searxng:${SEARXNG_PORT:-8081}/search?q=<query>
 
   bedrock-access-gateway:
     build:
@@ -27,35 +34,61 @@ services:
       dockerfile: Dockerfile_ecs
     container_name: bedrock-access-gateway
     restart: unless-stopped
+    networks:
+      - proxy
     ports:
       - ${BEDROCK_ACCESS_GATEWAY_PORT:-8000}:80
-    expose:
-      - ${BEDROCK_ACCESS_GATEWAY_PORT:-8000}
     environment:
       - AWS_REGION=${AWS_REGION:-us-west-2}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-    networks:
-      - proxy
 
   ollama-server:
     image: ollama/ollama:latest
     pull_policy: always
-    volumes:
-      - ollama:/root/.ollama
-      - ./scripts/ollama/entrypoint.sh:/entrypoint.sh
     container_name: ollama-server
+    entrypoint: [ "/bin/bash", "/entrypoint.sh" ]
     tty: true
     restart: unless-stopped
-    ports:
-      - ${OLLAMA_WEBAPI_PORT:-11434}:${OLLAMA_WEBAPI_PORT:-11434}
-    expose:
-      - ${OLLAMA_WEBAPI_PORT:-11434}
-    environment:
-      - OLLAMA_WEBAPI_PORT=${OLLAMA_WEBAPI_PORT:-11434}
-    entrypoint: ["/bin/bash", "/entrypoint.sh"]
+    volumes:
+      - ollama:/root/.ollama
+      - ./assets/ollama/entrypoint.sh:/entrypoint.sh
     networks:
       - proxy
+    ports:
+      - ${OLLAMA_WEBAPI_PORT:-11434}:${OLLAMA_WEBAPI_PORT:-11434}
+    environment:
+      - OLLAMA_WEBAPI_PORT=${OLLAMA_WEBAPI_PORT:-11434}
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+
+  valkey:
+    container_name: valkey
+    image: valkey/valkey:8-alpine
+    command: valkey-server --save 30 1 --loglevel warning
+    restart: unless-stopped
+    volumes:
+      - valkey:/data
+    networks:
+      - proxy
+
+  searxng-server:
+    container_name: searxng-server
+    image: searxng/searxng:latest
+    restart: unless-stopped
+    networks:
+      - proxy
+    ports:
+      - ${SEARXNG_PORT:-8081}:${SEARXNG_PORT:-8081}
+    volumes:
+      - searxng:/var/cache/searxng
+      - ./assets/searxng:/etc/searxng
+    environment:
+      - SEARXNG_BASE_URL=https://localhost:${SEARXNG_PORT:-8081}/
+      - SEARXNG_SECRET=${SEARXNG_SECRET:-someseaxngsecret}
+      - SEARXNG_LIMITER=False
+      - SEARXNG_PUBLIC_INSTANCE=False
+      - BIND_ADDRESS=0.0.0.0:${SEARXNG_PORT:-8081}
 
 networks:
   proxy:
@@ -65,3 +98,5 @@ networks:
 volumes:
   ollama: {}
   open-webui: {}
+  valkey: {}
+  searxng: {}
