--- a/assets/searxng/settings.yml
+++ b/assets/searxng/settings.yml
@@ -5,5 +5,8 @@ server:
   secret_key: "ultrasecretkey"  # change this!
   limiter: false  # enable this when running the instance for a public usage on the internet
   image_proxy: true
-redis:
-  url: redis://valkey:6379/0
+search:
+  formats:
+    - json
+valkey:
+  url: valkey://valkey:6379/0
