--- a/bedrock-openweb-ui.yaml
+++ b/bedrock-openweb-ui.yaml
@@ -18,15 +18,16 @@ services:
       - OPENAI_API_KEY=bedrock
       - ENABLE_OLLAMA_API=True
       - OLLAMA_BASE_URL=http://ollama-server:11434
+      - DEFAULT_MODELS=hf.co/unsloth/gemma-3-4b-it-GGUF:Q4_K_M
       - USE_CUDA_DOCKER=True
       - MODELS_CACHE_TTL=1210000
-      - ENABLE_RAG_WEB_SEARCH=True
-      - RAG_WEB_SEARCH_ENGINE=searxng
-      - RAG_WEB_SEARCH_RESULT_COUNT=10
-      - SEARXNG_SECRET=${SEARXNG_SECRET:-someseaxngsecret}
+      - ENABLE_WEB_SEARCH=True
+      - WEB_SEARCH_ENGINE=searxng
+      - WEB_SEARCH_RESULT_COUNT=10
+      - SEARXNG_SECRET=${SEARXNG_SECRET:-somesearxngsecret}
       - SEARXNG_LIMITER=False
       - SEARXNG_PUBLIC_INSTANCE=False
-      - SEARXNG_QUERY_URL=http://searxng:${SEARXNG_PORT:-8081}/search?q=<query>
+      - SEARXNG_QUERY_URL=http://searxng-server:${SEARXNG_PORT:-8888}/search?q=<query>
 
   bedrock-access-gateway:
     build:
@@ -36,7 +37,7 @@ services:
     restart: unless-stopped
     networks:
       - proxy
-    ports:
+    expose:
       - ${BEDROCK_ACCESS_GATEWAY_PORT:-8000}:80
     environment:
       - AWS_REGION=${AWS_REGION:-us-west-2}
@@ -55,15 +56,15 @@ services:
       - ./assets/ollama/entrypoint.sh:/entrypoint.sh
     networks:
       - proxy
-    ports:
+    expose:
       - ${OLLAMA_WEBAPI_PORT:-11434}:${OLLAMA_WEBAPI_PORT:-11434}
     environment:
       - OLLAMA_WEBAPI_PORT=${OLLAMA_WEBAPI_PORT:-11434}
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
-  valkey:
-    container_name: valkey
+  valkey-server:
+    container_name: valkey-server
     image: valkey/valkey:8-alpine
     command: valkey-server --save 30 1 --loglevel warning
     restart: unless-stopped
@@ -71,24 +72,26 @@ services:
       - valkey:/data
     networks:
       - proxy
+    expose:
+      - 6379
 
   searxng-server:
     container_name: searxng-server
-    image: searxng/searxng:latest
+    image: ghcr.io/searxng/searxng:2025.8.12-6b1516d
     restart: unless-stopped
     networks:
       - proxy
-    ports:
-      - ${SEARXNG_PORT:-8081}:${SEARXNG_PORT:-8081}
+    expose:
+      - ${SEARXNG_PORT:-8888}
     volumes:
       - searxng:/var/cache/searxng
-      - ./assets/searxng:/etc/searxng
+      - ./assets/searxng/:/etc/searxng/:rw
     environment:
-      - SEARXNG_BASE_URL=https://localhost:${SEARXNG_PORT:-8081}/
-      - SEARXNG_SECRET=${SEARXNG_SECRET:-someseaxngsecret}
+      - SEARXNG_BASE_URL=https://127.0.0.1:${SEARXNG_PORT:-8888}/
+      - SEARXNG_SECRET=${SEARXNG_SECRET:-somesearxngsecret}
       - SEARXNG_LIMITER=False
       - SEARXNG_PUBLIC_INSTANCE=False
-      - BIND_ADDRESS=0.0.0.0:${SEARXNG_PORT:-8081}
+      - GRANIAN_PORT=${SEARXNG_PORT:-8888}
 
 networks:
   proxy:
