--- a/bedrock-openweb-ui.yaml
+++ b/bedrock-openweb-ui.yaml
@@ -10,6 +10,8 @@ services:
     ports:
       - 80:80
       - 443:443
+    environment:
+      - TARGET=http://open-webui:${OPENWEBUI_PORT:-8080}
 
   open-webui:
     container_name: open-webui
