Split deployment into profiles and add a Makefile for ease of use

--- a/bedrock-openweb-ui.yaml
+++ b/bedrock-openweb-ui.yaml
@@ -22,28 +22,13 @@ services:
       - open-webui:/app/backend/data
     networks:
       - open-webui-bridge
+    env_file:
+      - ./assets/openwebui/env.${PROFILE}
     environment:
       - PORT=${OPENWEBUI_PORT:-8080}
       - HOST=0.0.0.0
-      - OPENAI_API_BASE_URL=http://bedrock-access-gateway:${BEDROCK_ACCESS_GATEWAY_PORT:-8000}/api/v1
-      - OPENAI_API_KEY=bedrock
-      - ENABLE_OLLAMA_API=True
-      - OLLAMA_BASE_URL=http://ollama-server:11434
-      - DEFAULT_MODELS=${LOCAL_MODEL:-hf.co/lmstudio-community/Qwen3-4B-Instruct-2507-GGUF:Q8_0}
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASS:-secret}@pgvector-server:5432/${POSTGRES_DB:-openwebui}
-      - VECTOR_DB=pgvector
-      - PGVECTOR_DB_URL=postgresql://${POSTGRES_USER:-postgres}:${POSTGRES_PASS:-secret}@pgvector-server:5432/${POSTGRES_DB:-openwebui}
-      - REDIS_URL=redis://valkey-server:6379/0
-      - SEARXNG_QUERY_URL=http://searxng-server:${SEARXNG_PORT:-8888}/search?q=<query>
-      - CONTENT_EXTRACTION_ENGINE=tika
-      - TIKA_SERVER_URL=http://tika-server:9998
       - USE_CUDA_DOCKER=True
       - MODELS_CACHE_TTL=1210000
-      - ENABLE_WEB_SEARCH=True
-      - WEB_SEARCH_ENGINE=searxng
-      - WEB_SEARCH_TRUST_ENV=True
-      - WEB_SEARCH_RESULT_COUNT=3
-      - WEB_SEARCH_CONCURRENT_REQUESTS=10
       - BYPASS_EMBEDDING_AND_RETRIEVAL=${BYPASS_EMBEDDING_AND_RETRIEVAL:-True}
 
   bedrock-access-gateway:
@@ -59,6 +44,10 @@ services:
       - AWS_REGION=${AWS_REGION:-us-west-2}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+    profiles:
+      - full
+      - bedrock
+      - lite
 
   ollama-server:
     container_name: ollama-server
@@ -77,30 +66,9 @@ services:
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
       - LOCAL_MODEL=${LOCAL_MODEL:-hf.co/lmstudio-community/Qwen3-4B-Instruct-2507-GGUF:Q8_0}
-
-  valkey-server:
-    container_name: valkey-server
-    image: valkey/valkey:8-alpine
-    command: valkey-server --save 30 1 --loglevel warning
-    restart: unless-stopped
-    volumes:
-      - valkey:/data
-    networks:
-      - open-webui-bridge
-
-  pgvector-server:
-    container_name: pgvector-server
-    image: pgvector/pgvector:0.8.0-pg17
-    restart: unless-stopped
-    volumes:
-      - pgvector:/var/lib/postgresql/data
-      - ./assets/pgvector/init.sql:/docker-entrypoint-initdb.d/init.sql
-    networks:
-      - open-webui-bridge
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASS:-secret}
-      - POSTGRES_USER=${POSTGRES_USER:-postgres}
-      - POSTGRES_DB=${POSTGRES_DB:-openwebui}
+    profiles:
+      - full
+      - ollama
 
   searxng-server:
     container_name: searxng-server
@@ -117,6 +85,10 @@ services:
       - SEARXNG_LIMITER=False
       - SEARXNG_PUBLIC_INSTANCE=False
       - GRANIAN_PORT=${SEARXNG_PORT:-8888}
+    profiles:
+      - full
+      - bedrock
+      - ollama
 
   tika-server:
     image: apache/tika:latest-full
@@ -124,6 +96,42 @@ services:
     restart: unless-stopped
     networks:
       - open-webui-bridge
+    profiles:
+      - full
+      - bedrock
+      - ollama
+
+  pgvector-server:
+    container_name: pgvector-server
+    image: pgvector/pgvector:0.8.0-pg17
+    restart: unless-stopped
+    volumes:
+      - pgvector:/var/lib/postgresql/data
+      - ./assets/pgvector/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - open-webui-bridge
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASS:-secret}
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_DB=${POSTGRES_DB:-openwebui}
+    profiles:
+      - full
+      - bedrock
+      - ollama
+
+  valkey-server:
+    container_name: valkey-server
+    image: valkey/valkey:8-alpine
+    command: valkey-server --save 30 1 --loglevel warning
+    restart: unless-stopped
+    volumes:
+      - valkey:/data
+    networks:
+      - open-webui-bridge
+    profiles:
+      - full
+      - bedrock
+      - ollama
 
 networks:
   open-webui-bridge:
@@ -131,8 +139,18 @@ networks:
     driver: bridge
 
 volumes:
-  ollama: {}
-  open-webui: {}
-  valkey: {}
-  pgvector: {}
-  searxng: {}
+  ollama:
+    labels:
+      - "com.github.bedrockopenwebui.stack"
+  open-webui:
+    labels:
+      - "com.github.bedrockopenwebui.stack"
+  valkey:
+    labels:
+      - "com.github.bedrockopenwebui.stack"
+  pgvector:
+    labels:
+      - "com.github.bedrockopenwebui.stack"
+  searxng:
+    labels:
+      - "com.github.bedrockopenwebui.stack"
