Expose Litellm port 4000 and allow tools param in Bedrock config

--- a/bedrock-openweb-ui.yaml
+++ b/bedrock-openweb-ui.yaml
@@ -7,6 +7,8 @@ services:
     networks:
       - open-webui-bridge
     ports:
+      - "4000:4000"
+    ports:
       - "443:443"
       - "80:80"
     volumes:
@@ -25,6 +27,8 @@ services:
       - ./assets/openwebui/pre-start.sh:/app/backend/pre-start.sh
     networks:
       - open-webui-bridge
+    ports:
+      - "4000:4000"
     environment:
       - PROFILE=${PROFILE}
       - PORT=${OPENWEBUI_PORT:-8080}
@@ -54,6 +58,8 @@ services:
     command: ["--config", "/app/config.yaml"]
     networks:
       - open-webui-bridge
+    ports:
+      - "4000:4000"
     environment:
       - PORT=4000
       - SERVER_ROOT_PATH=/litellm
@@ -97,6 +103,8 @@ services:
       - ./assets/ollama/entrypoint.sh:/entrypoint.sh
     networks:
       - open-webui-bridge
+    ports:
+      - "4000:4000"
     environment:
       - OLLAMA_WEBAPI_PORT=${OLLAMA_WEBAPI_PORT:-11434}
       - NVIDIA_VISIBLE_DEVICES=all
@@ -112,6 +120,8 @@ services:
     restart: unless-stopped
     networks:
       - open-webui-bridge
+    ports:
+      - "4000:4000"
     volumes:
       - searxng:/var/cache/searxng
       - ./assets/searxng:/etc/searxng:rw
@@ -132,6 +142,8 @@ services:
     restart: unless-stopped
     networks:
       - open-webui-bridge
+    ports:
+      - "4000:4000"
     profiles:
       - full
       - bedrock
@@ -143,6 +155,8 @@ services:
     restart: always
     networks:
       - open-webui-bridge
+    ports:
+      - "4000:4000"
     expose:
       - 8880
     profiles:
@@ -159,6 +173,8 @@ services:
       - ./assets/pgvector/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - open-webui-bridge
+    ports:
+      - "4000:4000"
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASS:-secret}
       - POSTGRES_USER=${POSTGRES_USER:-postgres}
@@ -177,6 +193,8 @@ services:
       - valkey:/data
     networks:
       - open-webui-bridge
+    ports:
+      - "4000:4000"
     profiles:
       - full
       - bedrock
