--- a/assets/litellm/config-bedrock.yaml
+++ b/assets/litellm/config-bedrock.yaml
@@ -6,6 +6,8 @@ model_list:
       aws_secret_access_key: os.environ/AWS_SECRET_ACCESS_KEY
       aws_region_name: os.environ/AWS_REGION
       rpm: 2
+      allowed_openai_params:
+        - tools
   - model_name: DeepSeek R1
     litellm_params:
       model: bedrock/us.deepseek.r1-v1:0
@@ -13,6 +15,8 @@ model_list:
       aws_secret_access_key: os.environ/AWS_SECRET_ACCESS_KEY
       aws_region_name: os.environ/AWS_REGION
       rpm: 10
+      allowed_openai_params:
+        - tools
     model_info:
       max_tokens: 4096
       max_input_tokens: 8192
