--- a/assets/litellm/config-bedrock.yaml
+++ b/assets/litellm/config-bedrock.yaml
@@ -6,8 +6,6 @@ model_list:
       aws_secret_access_key: os.environ/AWS_SECRET_ACCESS_KEY
       aws_region_name: os.environ/AWS_REGION
       rpm: 2
-      allowed_openai_params:
-        - tools
   - model_name: DeepSeek R1
     litellm_params:
       model: bedrock/us.deepseek.r1-v1:0
@@ -15,8 +13,6 @@ model_list:
       aws_secret_access_key: os.environ/AWS_SECRET_ACCESS_KEY
       aws_region_name: os.environ/AWS_REGION
       rpm: 10
-      allowed_openai_params:
-        - tools
     model_info:
       max_tokens: 4096
       max_input_tokens: 8192
@@ -29,12 +25,16 @@ model_list:
       aws_secret_access_key: os.environ/AWS_SECRET_ACCESS_KEY
       aws_region_name: os.environ/AWS_REGION
       rpm: 12
+      allowed_openai_params:
+        - tools
     model_info:
-      max_tokens: 4096
+      max_tokens: 8192
       max_input_tokens: 8192
-      max_output_tokens: 4096
+      max_output_tokens: 8192
       max_batch_total_tokens: 8192
 general_settings:
   user_header_name: X-OpenWebUI-User-Name
   store_model_in_db: true
   store_prompts_in_spend_logs: true
+litellm_settings:
+  drop_params: true
